--- a/main.yml
+++ b/main.yml
@@ -14,6 +14,8 @@ jobs:
       with:
         # necessary for github-action-til-autoformat-readme
         fetch-depth: 0
+    - name: Safe Directory
+      run: sudo git config --global --add safe.directory /github/workspace
     - name: Autoformat README
       uses: cflynn07/github-action-til-autoformat-readme@1.1.0
       with:
